fix: update the settings-o icon without the whitespace

--- a/icomoon/style.css
+++ b/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?xi3i3n');
-  src:  url('fonts/icomoon.eot?xi3i3n#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?xi3i3n') format('truetype'),
-    url('fonts/icomoon.woff?xi3i3n') format('woff'),
-    url('fonts/icomoon.svg?xi3i3n#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?v30ny');
+  src:  url('fonts/icomoon.eot?v30ny#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?v30ny') format('truetype'),
+    url('fonts/icomoon.woff?v30ny') format('woff'),
+    url('fonts/icomoon.svg?v30ny#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
